# asimov-ia-nutricionista

./: .env.example  README.md  pyproject.toml
nutricionist/chat/: memory.py
nutricionist/models/: __init__.py  meal_entry.py  user.py  weight_history.py
nutricionist/repositories/: base_repository.py  diet_plan.py  meal_entry.py  report.py  user.py  weight_history.py
nutritionist/agent/: nutritionist.py
nutritionist/database/: engine.py
nutritionist/models/: diet_plan.py  report.py
nutritionist/repositories/: base_repository.py  diet_plan.py  meal_entry.py  report.py  user.py  weight_history.py
nutritionist/tools/: diet_plain_tool.py  food_analyser_tool.py  user_registration_tool.py  weight_update_tool.py
